# esp32s2-nvs-linker-failure

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
