[package]
name = "esp32s2-nvs-linker-failure"
version = "0.1.0"
authors = ["Jonas Grawe <Shemnei@users.noreply.github.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["esp-idf-sys/native", "esp-idf-sys/panic_handler", "esp-idf-sys/alloc_handler", "esp-idf-sys/libstart"]

[dependencies]
esp-idf-sys = { version = "0.33.1", default-features = false }

[build-dependencies]
embuild = "0.31.2"
